# SCORBOT-ER-IX-ROS2

./: COMENTARIOS.TXT  Comments.txt  Comunicaciones.c  Comunicaciones.h  Linux.md  README.md  ROS2_Basics.md  prueba.py  rsp.launch.py
CONTROL_PLACA_1/: .ccsproject  .cproject  .project  DCLF32_scorbot.h  DCL_scorbot.h  F2837xD_Gpio.c  Homming.c  SetParametrosPID.c  control.c  control.h  eQEP_motor_1_2_3.c  eQEP_motor_1_2_3.h  init_PWM_motor_1_2_3.h  main.c  muestreo.c  muestreo.h  protecciones.c
CONTROL_PLACA_1/.launches/: CONTROL_PLACA_1.launch
CONTROL_PLACA_2/: .project  DCLF32_scorbot.h  Example_EPwmSetup.h  F2837xD_EQep.c  SetParametrosPID.c  adc_motor_1_2_3.c  control.c  control.h  eQEP_motor_1_2_3.c  eQEP_motor_1_2_3.h  main.c  muestreo.c  muestreo.h
CONTROL_PLACA_2/.launches/: CONTROL_1_2_3.launch  CONTROL_1_2_3_copy3.launch  CONTROL_PLACA_2.launch  eqep_pos_speed_cpu01.launch
Placa_01/: .cproject  .project  Comunicaciones.c  Comunicaciones.h  DCLF32_scorbot.h  Entradas_Salidas.h  Homming.c  Homming.h  SetParametrosPID.c  SetParametrosPID.h  adc_motor_1_2_3.c  control.c  control.h  eQEP_motor_1_2_3.c  main.c  muestreo.c
Placa_01/.launches/: blinky_cpu01.launch  blinky_cpu1.launch
Placa_01/CPU1_FLASH/: Comunicaciones.d  blinky_cpu1.map  blinky_cpu1.out  blinky_cpu1_linkInfo.xml  ccsObjs.opt  control.d  makefile  subdir_rules.mk
Placa_01/CPU1_RAM/: Homming.d  adc_motor_1_2_3.d  blinky_cpu01.d  blinky_cpu1.map  blinky_cpu1.out  blinky_cpu1_linkInfo.xml  ccsObjs.opt  main.d  makefile  protecciones.d  seteo_salidas.d  subdir_vars.mk
Placa_02/: .ccsproject  .cproject  .project  Comunicaciones.c  Entradas_Salidas.c  Example_EPwmSetup.c  Homming.c  Homming.h  SetParametrosPID.c  adc_motor_1_2_3.c  adc_motor_1_2_3.h  control.c  control.h  eQEP_motor_1_2_3.c  eQEP_motor_1_2_3.h  init_PWM_motor_1_2_3.c  main.c  muestreo.c  muestreo.h  protecciones.h  seteo_salidas.c  seteo_salidas.h
Placa_02/.launches/: blinky_cpu1.launch  blinky_cpu2.launch
Placa_02/CPU1_FLASH/: Homming.d  blinky_cpu2.map  blinky_cpu2.out  blinky_cpu2_linkInfo.xml  ccsObjs.opt  eQEP_motor_1_2_3.d  main.d  makefile  muestreo.d  objects.mk  sources.mk  subdir_rules.mk
Placa_02/CPU1_RAM/: Example_EPwmSetup.d  Homing.d  MEFs.d  SetParametrosPID.d  blinky_cpu01.map  blinky_cpu01_linkInfo.xml  blinky_cpu1.map  blinky_cpu1.out  blinky_cpu1_linkInfo.xml  blinky_cpu2.map  blinky_cpu2.out  blinky_cpu2_linkInfo.xml  ccsObjs.opt  init_PWM_motor_1_2_3.d  makefile  subdir_rules.mk
Placa_02/LAUNCHPAD_FLASH/: Entradas_Salidas.d  blinky_cpu2.map  blinky_cpu2_linkInfo.xml  ccsObjs.opt  makefile  objects.mk  subdir_rules.mk  subdir_vars.mk
Placa_02/device/: F2837xD_EQep.c
Placa_02/targetConfigs/: TMS320F28379D.ccxml
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/src/: subscriber_member_function.cpp
example_1/: CMakeLists.txt  README.md  package.xml  ros2_control_example.xml
example_1/doc/: userdoc.rst
example_1/hardware/: rrbot.cpp
example_1/test/: test_urdf_xacro.py  test_view_robot_launch.py
funciones_extras/: CMakeLists.txt  Comments.txt  README.md  package.xml
funciones_extras/launch/: ejecutar_trayectorias.launch.py  logger_gz.launch.py
funciones_extras/src/: guarda_comandos_estados.cpp  loggeo_de_datos.cpp  loggeo_de_gazebo.cpp  nodo_de_comunicacion.cpp  planeamiento_moveit.cpp  subscriber_member_function.cpp  trayectorias_predefinidas.cpp
py_pubsub/: Prueba.txt  package.xml  setup.py
py_pubsub/py_pubsub/: prueba.py  publisher_member_function.py  subscriber_member_function.py
sbot_description/: CMakeLists.txt  README.md  package.xml
sbot_description/config/: controller_plugin.yaml  controller_position.yaml
sbot_description/launch/: jsp_gui.launch.py  rsp.launch.py  rviz.launch.py  rviz_gui.launch.xml  visualize.launch.py
sbot_description/meshes/: link_base.STL  link_finger1.STL  link_finger2.STL  link_five.STL  link_four.STL  link_one.STL  link_three.STL  link_two.STL
sbot_description/rviz/: config.rviz
sbot_description/urdf/: caja.xacro  common.gazebo.xacro  macros_links_y_joints.xacro  physical_properties.xacro  ros2control.xacro  sbot_arm.urdf.xacro  sbot_gripper.urdf.xacro  scorbot.urdf.xacro
sbot_gazebo/: CMakeLists.txt  README.md  package.xml
sbot_gazebo/config/: bridge_config.yaml  control_gazebo.xacro  gz_plugin_control.xacro  gz_ros2_control.xacro  sbot.urdf.xacro  scorbot.ros2_control.xacro  scorbot_gz.urdf.xacro  transmission_gazebo.xacro
sbot_gazebo/launch/: bridge.launch.py  controllers.launch.py  rsp.launch.py  spawn_robot.launch.py  spawn_robot_gazebo.launch.xml  start_world.launch.py
sbot_gazebo/worlds/: empty.sdf
sbot_hardware_interface/: CMakeLists.txt  package.xml  sbot_hardware_interface.xml
sbot_hardware_interface/src/: sbot_hardware_interface.cpp
sbot_hi/: CMakeLists.txt  README.md  package.xml  sbot_hi.xml
sbot_hi/hardware/: rrbot.cpp  scorbot.cpp
sbot_hi/hardware/include/sbot_hi/: rrbot.hpp  scorbot.hpp  usb_functions.h  visibility_control.h
sbot_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
sbot_moveit _gazebo/: .setup_assistant  package.xml
sbot_moveit _gazebo/config/: moveit_controllers.yaml  ros2_controllers.yaml
sbot_moveit _gazebo/launch/: spawn_controllers.launch.py
sbot_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  sbot.ros2_control.xacro  sbot.srdf  sbot.urdf.xacro  scorbot.ros2_control.xacro  scorbot.srdf  scorbot.urdf.xacro  scorbot_gz.urdf.xacro
sbot_moveit/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_gz.launch.xml  moveit_gz.xml  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
sbot_moveit_gazebo/: CMakeLists.txt  README.md
sbot_moveit_gazebo/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  scorbot.srdf  (+3 more)
sbot_moveit_gz/: .setup_assistant  CMakeLists.txt  package.xml
sbot_real/: .setup_assistant  CMakeLists.txt  README.md  package.xml
sbot_ros2control/: CMakeLists.txt  package.xml
(+70 files in other folders)
